# java_regex

./: CONTRIBUTING.md  Cargo.toml  DIFFERENCES.md  DiffTest.java  FUZZING.md  LICENSE-APACHE  LICENSE-MIT  QUIRKS.md  README.md  SPEC.md  VerifyTests.java  java_regex_tests.jsonl  java_regex_tests_5000.jsonl
.github/workflows/: ci_01_tests.yml  ci_02_clippy.yml  ci_03_benchmark.yml  ci_04_doc.yml  ci_05_msrv.yml  ci_06_no_std.yml  ci_07_publish_dryrun.yml  ci_08_coverage.yml  ci_09_audit.yml  ci_10_semver.yml  ci_11_macos.yml  ci_12_windows.yml
examples/: batch_test.rs  bench_engines.rs  diff_fuzz.rs  diff_one.rs  test_case1.rs  test_find.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_engine.rs  fuzz_parser.rs  fuzz_replace.rs
src/: engine.rs  gen.rs  lib.rs  parser.rs  types.rs  unicode.rs
tests/: java_regex_tests.jsonl  java_regex_tests_5000.jsonl  java_regex_tests_diff.jsonl  java_regex_tests_diff2.jsonl  java_regex_tests_diff_s100.jsonl  java_regex_tests_diff_s1000.jsonl  java_regex_tests_diff_s200.jsonl  java_regex_tests_diff_s2001.jsonl  java_regex_tests_diff_s2002.jsonl  java_regex_tests_diff_s2003.jsonl  java_regex_tests_diff_s2004.jsonl  java_regex_tests_diff_s2005.jsonl  java_regex_tests_diff_s300.jsonl  java_regex_tests_diff_s3001.jsonl  java_regex_tests_diff_s3002.jsonl  java_regex_tests_diff_s3003.jsonl  java_regex_tests_diff_s3004.jsonl  java_regex_tests_diff_s3005.jsonl  java_regex_tests_diff_s3006.jsonl  java_regex_tests_diff_s3007.jsonl  java_regex_tests_diff_s3008.jsonl  java_regex_tests_diff_s3009.jsonl  java_regex_tests_diff_s3010.jsonl  java_regex_tests_diff_s400.jsonl  java_regex_tests_diff_s4001.jsonl  java_regex_tests_diff_s4002.jsonl  java_regex_tests_diff_s4003.jsonl  java_regex_tests_diff_s4004.jsonl  java_regex_tests_diff_s4005.jsonl  java_regex_tests_diff_s500.jsonl  java_regex_tests_diff_s5001.jsonl  java_regex_tests_diff_s5002.jsonl  java_regex_tests_diff_s5003.jsonl  java_regex_tests_diff_s5004.jsonl  java_regex_tests_diff_s5005.jsonl  java_regex_tests_diff_s5006.jsonl  java_regex_tests_diff_s5007.jsonl  java_regex_tests_diff_s5008.jsonl  java_regex_tests_diff_s5009.jsonl  java_regex_tests_diff_s5010.jsonl  (+52 more)
