[package]
name = "java_regex"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"  # for `let ... else` syntax used in examples
description = "Rust implementation of Java's java.util.regex.Pattern, byte-for-byte compatible with OpenJDK"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mathieudutour/java_regex"
documentation = "https://docs.rs/java_regex"
keywords = ["regex", "java", "regexp", "pattern", "openjdk"]
categories = ["text-processing", "parser-implementations", "no-std"]
exclude = [
    "/.github",
    "/fuzz",
    "/tests/openjdk_*.txt",
    "/tests/java_regex_tests_*.jsonl",
    "/DiffTest*.java", "/DiffOracle.java", "/DiffOracle*.class", "/DiffTest*.class",
    "/ConvertOpenJDK*", "/GenOpenJDKInline*", "/GenTests*.class", "/VerifyTests*",
]

[dependencies]
unicode-blocks = { version = "0.1.9", default-features = false }
unicode-general-category = { version = "1", default-features = false }
unicode-properties = { version = "0.1.4", default-features = false, features = ["general-category"] }
unicode-script = { version = "0.5.8", default-features = false }
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Comparison engines for examples/bench_engines.rs (used by the benchmark CI).
regex = "1"
fancy-regex = "0.14"
onig = { version = "6", default-features = false }

[features]
default = []
# Enables the `gen` module's Arbitrary derives so cargo-fuzz / structure-aware
# fuzzers can synthesize RegexNode values directly from raw fuzzer bytes.
fuzz-gen = ["dep:arbitrary"]

[lib]
path = "src/lib.rs"

[[example]]
name = "diff_fuzz"
required-features = ["fuzz-gen"]
